--- a/src/Movie.scss
+++ b/src/Movie.scss
@@ -21,7 +21,8 @@
             0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
         img{
             position: relative;
-            max-width: 120px;
+            max-width: 150px;
+            width: 100%;
             top: -50px;
             margin-right: 30px;
             box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25), 
