--- a/src/App.scss
+++ b/src/App.scss
@@ -1,35 +1,12 @@
-%message-shared {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-*{
+* {
     box-sizing: border-box;
-}
-
-html {
-    @extend %message-shared;
-}
-
+  }
+  
 body {
-    background-color: #eff3f7;
-    margin: 0 auto;
-    padding: 0;
-    height: 100%;
-    @extend %message-shared;
+background-color: #eff3f7;
+font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+margin: 0;
+padding: 0;
+height: 100%;
 }
-
-#root {
-    @extend %message-shared;
-}
-
-.loader {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 300;
-}
-
