--- a/src/Components/Movie.scss
+++ b/src/Components/Movie.scss
@@ -6,6 +6,7 @@
     padding: 50px;
     padding-top: 70px;
     width: 80%;
+    margin: 0 auto;
     .movie{
         display: flex;
         justify-content: space-between;
@@ -24,7 +25,7 @@
             max-width: 150px;
             width: 100%;
             top: -50px;
-            margin-right: 30px;
+            margin-right: 65px;
             box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25), 
             0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
         }
