--- a/src/Components/Navigation.scss
+++ b/src/Components/Navigation.scss
@@ -1,25 +1,34 @@
 .nav {
+    z-index: 10;
     position: fixed;
-    top: 50px;
-    left: 10px;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 10%;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    // flex-direction: column;
     background-color: white;
     padding: 10px 20px;
     box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
         0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
     border-radius: 5px;
+    &__container{
+        width: 250px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
     &__link {
         text-decoration: none;
-        color: #0008fc;
-        text-transform: uppercase;
-        font-size: 12px;
+        color: #2c2c2c;
+        // text-transform: uppercase;
+        font-size: 18px;
         text-align: center;
         font-weight: 600;
-        margin-bottom: 10px;
-        
-    }
-    & :last-child {
-        margin-bottom: 0px;
+        transition: 0.3s;
+        &:hover {
+            color: #adaeb9; 
+        }
     }
 }
