--- a/src/Components/Detail.scss
+++ b/src/Components/Detail.scss
@@ -1,7 +1,7 @@
 .detail {
     width: 70%;
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto auto;
     grid-template-rows: 1fr 1fr;
     column-gap: 50px;
     row-gap: 20px;
@@ -9,6 +9,9 @@
     &__poster {
         grid-row: 1/3;
         width: 100%;
+        img{
+            max-width: 100%;
+        }
     }
     &__column {
         grid-row: 1/3;
