--- a/src/routes/About.scss
+++ b/src/routes/About.scss
@@ -1,22 +1,59 @@
 .about {
     box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
       0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
-    padding: 20px;
+    padding: 30px 50px;
     border-radius: 5px;
     background-color: white;
     margin: 0 auto;
     position: absolute;
     top: 30%;
     max-width: 60%;
-    height: 20%;
+    // height: 20%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-weight: 300;
-    span {
+    &__title {
+      text-align: center;
+      font-size: 28px;
+      color: #2c2c2c;
+    }
+    &__text {
+      margin-top: 40px;
+      font-size: 18px;
+      color: #adaeb9;
+      a {
+        text-decoration: none;
+        color: blue
+      }
+    }
+    &__keywords {
+      margin-top: 25px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 80%;
+      font-weight: 500;
+      li {
+        list-style: none;
+      }
+    }
+    &__message {
+      font-weight: 500;
+      align-self: flex-start;
+      margin-top: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      &-text {
+        margin-right: 20px;
         font-size: 20px;
-        display: flex;
-        flex-wrap: wrap;
-        text-align: center;
+      }
+    }
+    &__git {
+      img {
+        margin-right: 10px;
+      }
     }
   }
