--- a/src/routes/About.scss
+++ b/src/routes/About.scss
@@ -29,6 +29,7 @@
       }
     }
     &__keywords {
+      padding-inline-start: 0px;
       margin-top: 25px;
       display: flex;
       justify-content: space-between;
