--- a/src/App.scss
+++ b/src/App.scss
@@ -3,10 +3,13 @@
   }
   
 body {
-background-color: #eff3f7;
-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-margin: 0;
-padding: 0;
-height: 100%;
+  background-color: #eff3f7;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
+
+
+@import './media';
